# anyduck

./: .gitmodules  CMakeLists.txt  Makefile  README.md
doc/: anyduck.org
src/: CMakeLists.txt
src/anyduck/: CMakeLists.txt  anyduck.b.cpp  anyduck.cpp  anyduck.h  anyduck.t.cpp  anyduck_hiddenduck.cpp  anyduck_hiddenduck.h
src/examples/: CMakeLists.txt  main.cpp
src/iduck/: CMakeLists.txt  iduck.b.cpp  iduck.cpp  iduck.h  iduck.t.cpp  iduck_hiddenduck.cpp  iduck_hiddenduck.h
src/scratch/: scratch.h  scratch.t.cpp
src/tepsduck/: CMakeLists.txt  tepsduck.b.cpp  tepsduck.cpp  tepsduck.h  tepsduck.t.cpp  tepsduck_hiddenduck.cpp  tepsduck_hiddenduck.h
